Changes for RetailProductCatalog setup: adding relevant comments